--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,10 +21,10 @@
   %p#notice= notice 
   %p#class= alert
   .container
-    .span-24.site_title
-      .span-24#test_pattern
-        .span-10.log_in_bar= render "layouts/nav_login"
-        .span-12.log_in_bar= render "layouts/nav_tabs"
-      .span-10
-    .span-24
-      = yield
+    .span-24#header
+      .span-13#site_title
+        TM Schedule
+      .span-10.last
+        .span-10.append-1.log_in_bar#header_right= render "layouts/nav_login"
+        .span-10.log_in_bar.last= render "layouts/nav_tabs"
+    = yield
