--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -1,12 +1,14 @@
 %span.span-4
   .span-4#lead_box.club_background Club
   - if current_user.admin_for(current_club.id)
-    .span-4#header_box
-      = link_to '(edit)', edit_club_path(@club)
-    .span-4#header_box
-      = link_to '(add)', new_club_path()
+    #action_box
+      .span-4
+        = link_to '(edit)', edit_club_path(@club)
+      .span-4
+        = link_to '(add)', new_club_path()
 %span.span-18
-  #lead_box
+  .span-18
+    .span-3#labeler Name
     .span-14= @club.name
   .span-18
     .span-3#labeler Address
@@ -16,12 +18,18 @@
   .span-18
     .span-3#labeler Number
     %span.span-14= @club.club_number
-  #lead_box.span-18 Upcoming Meetings
   .span-18
-    %table
-    = render :partial => 'shared/meeting', :collection => @club.upcoming_meetings
-  = link_to "(+) New Meeting", new_meeting_path
-  %span.span-10
-    %h4.member_background Members
-    = render :partial => 'shared/member', :collection => @club.members
-    = link_to "(+) New Member", members_search_path
+    .span-3
+      .meeting_background#labeler.last Meetings
+      .span-3= link_to "(+) New Meeting", new_meeting_path
+    .span-14.prepend-1.last
+      %table.span-10.append-8
+        %th Date
+        %th Theme
+        = render :partial => 'shared/meeting', :collection => @club.upcoming_meetings
+  .span-18
+    .span-3
+      .member_background#labeler.last  Members
+      .span-3= link_to "(+) New Member", members_search_path
+    .span-14.prepend-1.last
+      = render :partial => 'shared/member', :collection => @club.members
