--- a/app/views/meetings/index.html.haml
+++ b/app/views/meetings/index.html.haml
@@ -1,11 +1,19 @@
 .span-4
   .span-4#lead_box.meeting_background Meetings
+  #action_box
+    .span-4= link_to '(Add)', new_meeting_path()
 .span-16
   .span-16#lead_box
     = link_to @club.name, @club, :style => 'text-decoration: none'
+  %h3 Upcoming Meetings
   %table.span-16
     %tr
       %th Date
       %th Theme
     = render @meetings
   = link_to 'New meeting', new_meeting_path
+  %h3 Past Meetings
+  %table.span-16
+    %tr
+      %th Date
+      %th Theme
