--- a/public/stylesheets/special.css
+++ b/public/stylesheets/special.css
@@ -4,6 +4,10 @@
   font-style: italic;
   padding-left: 10px;
 }
+#header {
+  border-bottom:1px dotted #666;
+  margin-bottom: 9px;
+}
 
 #header_box {
   border-bottom:thin solid #0B79D9;
@@ -20,14 +24,13 @@
 
 }
 
-#log_in_bar {
+.log_in_bar {
   line-height: 3em;
   text-align: right;
 }
 
 #header_right {
   text-align:right;
-
   float: right;
 }
 
