--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -22,6 +22,7 @@
         .span-6= link_to @member.my_club.name, @member.my_club 
     .span-20  
       .span-4#labeler.meeting_background Meetings
+      .span-8.last= link_to "History", "http://www.google.com"
       .span-8.last
         %table
           %tr
