Putting upcoming meetings together with members

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,28 +1,21 @@
 = content_for :top_title do
   = "TM Schedule Me"
-%p.span-16
-  Speech clubs like 
-  %a{:href => "http://www.toastmasters.org"} Toastmasters 
-  give you great opportunities to advance your speaking skills.  However, keeping track of your own progress towards goals and keeping your club on track with several different speakers can be a nightmare of spreadsheets, outdated tools, and multiple e-mails. 
-  
-%p.span-24 TM Schedule Me is an online tool that will help keep your club on track, on time and moving forward to the next goals.
-.span24
-  %h3.span-4 Members
-  %ul.span-19.last
-    %li keep on track with upcoming meetings and roles
-    %li know where you are in reaching their goals
-    %li get recognition for achievements
-.span24
-  %h3.span-4 Officers
-  %ul.span-19.last
-    %li President : see the big picture of your clubs progress and recognize achievements
-    %li VP Education : tame multiple conflicting schedule requests 
-    %li VP Membership : follow attendance and identify members needing help with speeches
-    %li Treasurers : track and follow up on dues 
-    
-%p.span-16
-  To get started, register as a member and then add your own club.  If your club is already using this site, contact one of your officers to get started using the site. 
-%p.span-16
-  / Start a new club scheduler here.
-%p.span-16
-  / = link_to "New Member", new_member_path
+
+.span-24
+  .span-4#lead_box.club_background Clubs
+  .span-20.last
+    %h2 Manage and promote your club
+    %p  TM Schedule makes it easy to manage your club in one location.
+  .span-4#lead_box.member_background Members
+  .span-20.last
+    %h2 Track memberships and activity
+    %p  TM Schedule takes the hard work out of getting your membership roles up to date, knowing who's eligible for awards and helping you get them to the next stage
+  .span-4#lead_box.meeting_background Meetings
+  .span-20.last
+    %h2 Get the calendar to work for you
+    %p  Now you'll know when the next meeting is, who's filling which roles, and TM Schedule will take care of notifying all participants.  Want a simple way to notify guests and future members that a meeting is coming up?  Use TM Schedule!
+  .span-4#lead_box.meeting_background Meetings
+  .span-20.last
+    %h2 Get the calendar to work for you
+    %p  Now you'll know when the next meeting is, who's filling which roles, and TM Schedule will take care of notifying all participants.  Want a simple way to notify guests and future members that a meeting is coming up?  Use TM Schedule!
+ 
