--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -6,10 +6,10 @@
     .span-4= link_to '(Edit)', edit_member_path(@member)
     .span-4= link_to '(Add)', new_member_path()
 .span-20.last
-  .span-16
-    .span-4#labeler Name
-    = @member.name
-  .span-20#content_box
+  .span-20
+    .span-20
+      .span-4#labeler Name
+      = @member.name
     .span-20  
       .span-4#labeler E-Mail
       = @member.email
@@ -20,15 +20,25 @@
       .span-4#labeler.club_background Club
       - if not @member.my_club.nil? then  
         .span-6= link_to @member.my_club.name, @member.my_club 
-    .span-20  
-      .span-4#labeler.meeting_background Upcoming Roles
-      .span-16.last
-        %table
-          %tr
-            %th Date
-            %th Role
-          = render :partial => 'role', :collection => @member.upcoming_roles
-          / TODO: Add in new Role function for a person
+    - if @member.upcoming_roles.count > 0 then
+      .span-20  
+        .span-4#labeler.meeting_background Upcoming Roles
+        .span-16.last
+          %table
+            %tr
+              %th Date
+              %th Role
+            = render :partial => 'role', :collection => @member.upcoming_roles
+            / TODO: Add in new Role function for a person
+    - if @member.past_roles.count > 0 then
+      .span-20  
+        .span-4#labeler.meeting_background Past Roles
+        .span-16.last
+          %table
+            %tr
+              %th Date
+              %th Role
+            = render :partial => 'role', :collection => @member.past_roles
     .span-20.last
       .span-4#labeler.member_background Memberships
       .span-8.last
