--- a/app/views/meetings/_meeting.html.haml
+++ b/app/views/meetings/_meeting.html.haml
@@ -1,3 +1,4 @@
 %tr
-  %td= link_to(meeting.meeting_date, meeting)
+  %td= link_to(meeting.meeting_date_part, meeting)
+  %td= meeting.meeting_time_part
   %td= meeting.theme
