--- a/app/views/meetings/index.html.haml
+++ b/app/views/meetings/index.html.haml
@@ -3,19 +3,23 @@
   #action_box
     .span-4= link_to '(Add)', new_meeting_path()
 .span-20.last
-  .span-20.last
-    .span-4#labeler Upcoming 
-    .span-16.last
-      %table
-        %tr
-          %th Date
-          %th Theme
-        = render @meetings
-  .span-20.last
-    .span-4#labeler Past
-    .span-16.last
-      %table.span-16
-        %tr
-          %th Date
-          %th Theme
-        = render @past_meetings
+  - if @meetings.count > 0 then
+    .span-20.last
+      .span-4#labeler Upcoming 
+      .span-16.last
+        %table
+          %tr
+            %th Date
+            %th Time
+            %th Theme
+          = render @meetings
+  - if @past_meetings.count > 0 then
+    .span-20.last
+      .span-4#labeler Past
+      .span-16.last
+        %table.span-16
+          %tr
+            %th Date
+            %th Time
+            %th Theme
+          = render @past_meetings
