--- a/app/views/shared/_meeting.html.haml
+++ b/app/views/shared/_meeting.html.haml
@@ -1,3 +1,4 @@
 %tr
-  %td= link_to meeting.meeting_date, [@club, meeting]
+  %td= link_to meeting.meeting_date_part, [@club, meeting]
+  %td= meeting.meeting_time_part
   %td= meeting.theme
