--- a/public/stylesheets/special.css
+++ b/public/stylesheets/special.css
@@ -16,7 +16,10 @@
 }
 
 .new_link {
-  margin-bottom: 5px;
+  margin-bottom: 1em;
+  margin-left: 1em;
+  font-weight: bold;
+  font-style: italic;
 
   }
 
