Fixed upcoming roles for member view
Feels a little cludgy - could be better, but not sure how to make it work.

--- a/app/views/meetings/index.html.haml
+++ b/app/views/meetings/index.html.haml
@@ -1,7 +1,5 @@
 .span-4
   .span-4#lead_box.meeting_background Meetings
-  #action_box
-    .span-4= link_to '(Add)', new_meeting_path()
 .span-20.last
   - if @meetings.count > 0 then
     .span-20.last
@@ -17,9 +15,11 @@
     .span-20.last
       .span-4#labeler Past
       .span-16.last
-        %table.span-16
+        %table
           %tr
             %th Date
             %th Time
             %th Theme
           = render @past_meetings
+  .span-20.last
+    .prepend-4.new_link= link_to '(+ Add New Meeting)', new_meeting_path()
