--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,8 +13,8 @@
   = stylesheet_link_tag("formtastic")
   = stylesheet_link_tag("special.css")
   = javascript_include_tag 'jquery', 'rails', 'application'
-  = javascript_include_tag 'jquery-ui-timepicker-addon.js', 'rails', 'application'
-  = javascript_include_tag "jquery.min.js", "application"
+  //= javascript_include_tag 'jquery-ui-timepicker-addon.js', 'rails', 'application'
+  //= javascript_include_tag "jquery.min.js", "application"
   = javascript_include_tag "jquery-ui.min.js", "application"
   = stylesheet_link_tag "jquery-ui.css"
   = csrf_meta_tag
