--- a/app/views/meetings/_role.html.haml
+++ b/app/views/meetings/_role.html.haml
@@ -3,4 +3,4 @@
   %td= role.member_name
   %td= link_to 'Up', :controller => "roles", :action => "up", :id => role
   %td= link_to 'Down', :controller => "roles", :action => "down", :id => role
-  %td= link_to 'Drop', [@meeting, role], :confirm => 'Are you sure?', :method => :delete
+  %td= link_to 'Drop', [@meeting, role], :confirm => 'Are you sure you want to delete this role?', :method => :delete
