--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,6 @@
 %html
 %head
   %title= @header_text
-  = stylesheet_link_tag('http://fonts.googleapis.com/css?family=Droid+Serif')
-  = stylesheet_link_tag('http://fonts.googleapis.com/css?family=Droid+Serif:bold')
   = stylesheet_link_tag("blueprint/screen.css")
   = stylesheet_link_tag("blueprint/ie.css")
   = stylesheet_link_tag "blueprint/print.css", :media => "print"
@@ -13,8 +11,6 @@
   = stylesheet_link_tag("formtastic")
   = stylesheet_link_tag("special.css")
   = javascript_include_tag 'jquery', 'rails', 'application'
-  //= javascript_include_tag 'jquery-ui-timepicker-addon.js', 'rails', 'application'
-  //= javascript_include_tag "jquery.min.js", "application"
   = javascript_include_tag "jquery-ui.min.js", "application"
   = stylesheet_link_tag "jquery-ui.css"
   = csrf_meta_tag
@@ -29,3 +25,6 @@
         .span-10.append-1.log_in_bar#header_right= render "layouts/nav_login"
         .span-10.log_in_bar.last= render "layouts/nav_tabs"
     = yield
+    .span-24#footer= render "layouts/nav_footer"
+    
+    
