--- a/public/stylesheets/special.css
+++ b/public/stylesheets/special.css
@@ -1,3 +1,9 @@
+#footer {
+  border-top: thin solid #0B79D9;
+  text-align: right;
+  font-size: 125%;
+}
+
 #action_box {
   font-size: 125%;
   font-weight: bold;
