Filling out the footer

--- a/app/views/clubs/_form.html.haml
+++ b/app/views/clubs/_form.html.haml
@@ -4,3 +4,4 @@
     = f.input :address, :as => :text, :required => false, :input_html => { :rows => 4}
     = f.input :club_number, :as => :string, :required => false
   = f.buttons :commit
+  %p WOw!
