Added Guard reload - slows things down a bit.

--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -7,13 +7,13 @@
 %span.span-18.last 
   .span-16.last 
     .span-3#labeler Date
-    = @meeting.meeting_date_part
+    .value= @meeting.meeting_date_part
   .span-16.last 
     .span-3#labeler Time
-    = @meeting.meeting_time_part 
+    .value= @meeting.meeting_time_part 
   .span-16.last 
     .span-3#labeler Theme
-    = @meeting.theme
+    .value= @meeting.theme
   .span-18
     .span-3
       #labeler Roles
