--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -9,26 +9,26 @@
   .span-20
     .span-20
       .span-4#labeler Name
-      = @member.name
+      .value= @member.name
     .span-20  
       .span-4#labeler E-Mail
-      = @member.email
+      .value= @member.email
     .span-20  
       .span-4#labeler Phone
-      = @member.phone
+      .value= @member.phone
     .span-20  
       .span-4#labeler.club_background Club
       - if not @member.my_club.nil? then  
-        .span-6= link_to @member.my_club.name, @member.my_club 
+        .span-6.value= link_to @member.my_club.name, @member.my_club 
     - if @member.upcoming_roles.count > 0 then
       .span-20  
         .span-4#labeler.meeting_background Upcoming Roles
         .span-16.last
           %table
             %tr
-              %th Date
-              %th Time
-              %th Role
+              %th.value Date
+              %th.value Time
+              %th.value Role
             = render :partial => 'role', :collection => @member.upcoming_roles
             / TODO: Add in new Role function for a person
     - if @member.past_roles.count > 0 then
