Fixed bug in ordinal for roles
New role didn't have correct ordinal.  Still trying to differentiate roles.

--- a/app/views/layouts/_nav_login.html.haml
+++ b/app/views/layouts/_nav_login.html.haml
@@ -5,8 +5,6 @@
   = ": Not you?"
   = link_to "Logout", logout_path
 - else
-  Not a member? 
-  = link_to "Register", new_member_path
-  Or 
   = link_to "Sign In", login_path
-
+  = " Not a member? "
+  = link_to "Register", new_member_path
