--- a/app/views/roles/edit.html.haml
+++ b/app/views/roles/edit.html.haml
@@ -1,8 +1,8 @@
 %span.span-4
-  %span#lead_box.span-4.edit_label.meeting_background  Meeting
+  %span#lead_box.span-4.edit_label.meeting_background  Role
 %span.span-16
   %h2.span-16#lead_box
     Changing Roles for 
     = @meeting.meeting_date_pretty
-  .span-16.prepend
+  .span-12
     = render 'form'
