--- a/app/views/roles/new.html.haml
+++ b/app/views/roles/new.html.haml
@@ -4,7 +4,7 @@
   .span-16#lead_box
     Add a Role for 
     = link_to @meeting.meeting_date_pretty, meeting_path(@meeting), :style => 'text-decoration: none'
-  .span-16.prepend-1
+  .span-12
     = render 'form'
 
 / = link_to 'Back', roles_path
