Cleanup on edit roles, moved delete
Added refactoring roles.

--- a/app/views/meetings/_role.html.haml
+++ b/app/views/meetings/_role.html.haml
@@ -1,7 +1,11 @@
 %tr
   %td= link_to role.role_type, edit_meeting_role_path(@meeting, role) 
   %td= role.member_name
-  %td= link_to 'Up', :controller => "roles", :action => "up", :id => role
-  %td= link_to 'Down', :controller => "roles", :action => "down", :id => role
-  %td= link_to 'Drop', [@meeting, role], :confirm => 'Are you sure you want to delete this role?', :method => :delete
-  %td= role.ordinal
+  - if role.ordinal > 0 
+    %td= link_to 'Up', :controller => "roles", :action => "up", :id => role
+  - else
+    %td 
+  - if role.ordinal < (@meeting.roles.count - 1)
+    %td= link_to 'Down', :controller => "roles", :action => "down", :id => role
+  - else
+    %td
