--- a/app/views/roles/_form.html.haml
+++ b/app/views/roles/_form.html.haml
@@ -13,4 +13,5 @@
         = f.input :title
       .actions
         = f.buttons
-        = link_to ' <- Back to Meeting', meeting_path(@meeting)
+    .span-20= link_to 'Drop', @role, :confirm => 'Are you sure you want to delete this role?', :method => :delete
+    .span-20= link_to ' <- Back to Meeting', meeting_path(@meeting)
