Working out issues with ordinals
Probably could do something fancy with object oriented programming.

--- a/app/views/meetings/_form.html.haml
+++ b/app/views/meetings/_form.html.haml
@@ -10,5 +10,5 @@
       =f.input :meeting_date_part, :as => :string, :label => "Date"
       =f.input :meeting_time_part, :as => :string, :label => "Time"
       = f.input :theme, :as => :string
-  = f.buttons :commit
-  = link_to '<- Back to Meeting', @meeting
+  .span-10
+    = f.buttons :commit
