--- a/app/views/meetings/_form.html.haml
+++ b/app/views/meetings/_form.html.haml
@@ -12,3 +12,5 @@
       = f.input :theme, :as => :string
   .span-10
     = f.buttons :commit
+  .span-10
+    = link_to '<- Back to Meeting', @meeting
