--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,9 +1,9 @@
 %span.span-4
   .span-4#lead_box.meeting_background Meeting
   .span-4#action_box
-    = link_to '(Change Meeting)', edit_meeting_path(@meeting)
+    = link_to '(Change)', edit_meeting_path(@meeting)
   .span-4#action_box
-    = link_to '(Add Meeting)', new_meeting_path()
+    = link_to '(Add New)', new_meeting_path()
 %span.span-18.last 
   .span-16.last 
     .span-3#labeler Date
