--- a/app/views/roles/edit.html.haml
+++ b/app/views/roles/edit.html.haml
@@ -1,5 +1,5 @@
 %span.span-4
-  %span#lead_box.span-4.edit_label.meeting_background  Role
+  %span#lead_box.span-4.edit_label.meeting_background  Meeting Role
 %span.span-16
   %h2.span-16#lead_box
     Changing Roles for 
