Fixed meetings future and past in index

--- a/app/views/meetings/_meeting.html.haml
+++ b/app/views/meetings/_meeting.html.haml
@@ -1,4 +1,4 @@
 %tr
-  %td= link_to(meeting.meeting_date_part, meeting)
-  %td= meeting.meeting_time_part
-  %td= meeting.theme
+  %td.span-3= link_to(meeting.meeting_date_part, meeting)
+  %td.span-4= meeting.meeting_time_part
+  %td.span-last= meeting.theme
