--- a/app/views/meetings/index.html.haml
+++ b/app/views/meetings/index.html.haml
@@ -1,7 +1,9 @@
 .span-4
   .span-4#lead_box.meeting_background Meetings
+  .span-4#action_box
+    = link_to '(Add New)', new_meeting_path()
 .span-20.last
-  - if @meetings.count > 0 then
+  - if @club.meetings.upcoming then
     .span-20.last
       .span-4#labeler Upcoming 
       .span-16.last
@@ -10,8 +12,8 @@
             %th Date
             %th Time
             %th Theme
-          = render @meetings
-  - if @past_meetings.count > 0 then
+          = render @upcoming_meetings
+  - if @club.meetings.past then
     .span-20.last
       .span-4#labeler Past
       .span-16.last
@@ -21,5 +23,3 @@
             %th Time
             %th Theme
           = render @past_meetings
-  .span-20.last
-    .prepend-4.new_link= link_to '(+ Add New Meeting)', new_meeting_path()
