--- a/app/views/layouts/_nav_footer.html.haml
+++ b/app/views/layouts/_nav_footer.html.haml
@@ -1,4 +1,6 @@
 %span#action_box
+  = link_to "Pricing", pricing_path
+%span#action_box
   = link_to "About", about_path
 %span#action_box
   = link_to "Blog", "http://tm-schedule.tumblr.com/", :target => "_blank"
