--- a/app/views/layouts/_nav_login.html.haml
+++ b/app/views/layouts/_nav_login.html.haml
@@ -7,4 +7,4 @@
 - else
   = link_to "Sign In", login_path
   = " Not a member? "
-  = link_to "Register", new_member_path
+  = link_to "Register", welcome_register_path
