Breaking in the register process

--- a/app/views/welcome/register.html.haml
+++ b/app/views/welcome/register.html.haml
@@ -5,7 +5,7 @@
   .span-4#lead_box.member_background Member
   .span-20.last
     .span-4#lead_box
-      (New member)
+      = link_to '(New Member)', welcome_newmember_path  
     .span-16.last
       %h2 New member in an existing club
       %p You're a guest or interested in joining a club already using this service. That's great! 
