First half of new member -> new club built.
Fixing up the problem with a new club

--- a/app/views/welcome/register.html.haml
+++ b/app/views/welcome/register.html.haml
@@ -11,7 +11,7 @@
       %p You're a guest or interested in joining a club already using this service. That's great! 
       %p Signing up is easy - use the search form to find your club and click the "I want to join" button.  The club administrator will take care of the rest for you.
     .span-4#lead_box
-      (New club)
+      = link_to '(New club)', welcome_newclub_path
     .span-16.last
       %h2 Start a new club as administrator
       %p Welcome to TM Schedule.  We'll help you take your club adminstration to the next level.  
