Trying out pricing questions

--- a/app/views/welcome/pricing.html.haml
+++ b/app/views/welcome/pricing.html.haml
@@ -4,6 +4,68 @@
 .span-24
   .span-4#lead_box.club_background Pricing
   .span-20.last
-    %h2 Pricing on TM Schedule is simple.  
-    %p  Getting started with a new club brings a lot of challenges.  Figuring out how to handle your membership, keep everyone in touch and sharing the news should be the least of your worries.
-    %p  
+    %h2 TM Schedule Price plans are very simple.  
+    %table
+      %th Benefits
+      %th Advanced
+      %th Essential
+      %th Starter
+      %tr
+        %td Members
+        %td Unlimited
+        %td Unlimited
+        %td Unlimited
+      %tr
+        %td Meetings
+        %td Unlimited
+        %td Unlimited
+        %td Unlimited
+      %tr
+        %td Roles
+        %td Unlimited
+        %td Unlimited
+        %td Unlimited
+      %tr
+        %td Notifications
+        %td E-mail to Guests and Members
+        %td E-mail to Members
+        %td -
+      %tr
+        %td Leadership Roles
+        %td All Officers
+        %td VP Membership only
+        %td -
+      %tr
+        %td Support
+        %td Chat + E-mail
+        %td E-mail
+        %td -
+      %tr
+        %td Rates
+        %td $10 / month
+        %td $8 / month
+        %td $6 / month 
+    %h2 Discounts
+    %p Interested in paying in advance for six months or a year?  Great!!
+    %p 
+      Pay six months in advance and get a month free.  Pay a full year in advance and your club will get 
+      three months free.
+    %table
+      %th Benefits
+      %th Advanced
+      %th Essential
+      %th Starter
+      %tr
+        %td Six Months (One Free!)
+        %td $50 / month
+        %td $40 / month
+        %td $30 / month 
+      %tr
+        %td Twelve Months (Three Free!)
+        %td $50 / month
+        %td $40 / month
+        %td $30 / month 
+      
+        
+      
+    
