--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -1,11 +1,12 @@
 = semantic_form_for @member do |f|
-  - f.inputs do
-    = f.input :name, :as => :string
-    = f.input :email, :as => :email
-    = f.input :phone, :as => :phone
-    = f.input :primary_club, :as => :select, :collection => @club_choices
-    - if @editing_self
-      = f.input :password
-      = f.input :password_confirmation
-  // TODO: Select for relationship and default to member?  Guest?   
-  = f.buttons :commit
+  .span-10.last.append-6
+    = f.inputs do
+      = f.input :name, :as => :string
+      = f.input :email, :as => :email
+      = f.input :phone, :as => :phone
+      = f.input :primary_club, :as => :select, :collection => @club_choices
+      - if @editing_self
+        = f.input :password
+        = f.input :password_confirmation
+    // TODO: Select for relationship and default to member?  Guest?   
+    = f.buttons :commit
