--- a/app/views/clubs/_form.html.haml
+++ b/app/views/clubs/_form.html.haml
@@ -3,5 +3,5 @@
     = f.input :name, :as => :string
     = f.input :address, :as => :text, :required => false, :input_html => { :rows => 4}
     = f.input :club_number, :as => :string, :required => false
+    = f.input :plan_type, :as => :string
   = f.buttons :commit
-  %p WOw!
