--- a/app/views/meetings/_edit_role.html.haml
+++ b/app/views/meetings/_edit_role.html.haml
@@ -1,13 +1,10 @@
 %tr
   %td= link_to role.role_type, edit_meeting_role_path(@meeting, role) 
   %td= role.member_name
+  %td= role.ordinal  %td
   - if role != @meeting.role_first
     %td= link_to '^ Up ^', :controller => "roles", :action => "up", :id => role
   - else
-    %td
-      %br
+    %td 
   - if role != @meeting.role_last
     %td= link_to 'v Down v', :controller => "roles", :action => "down", :id => role
-  - else
-    %td 
-      %br
