--- a/app/views/welcome/pricing.html.haml
+++ b/app/views/welcome/pricing.html.haml
@@ -4,68 +4,54 @@
 .span-24
   .span-4#lead_box.club_background Pricing
   .span-20.last
-    %h2 TM Schedule Price plans are very simple.  
-    %table
-      %th Benefits
-      %th Advanced
-      %th Essential
-      %th Starter
-      %tr
-        %td Members
-        %td Unlimited
-        %td Unlimited
-        %td Unlimited
-      %tr
-        %td Meetings
-        %td Unlimited
-        %td Unlimited
-        %td Unlimited
-      %tr
-        %td Roles
-        %td Unlimited
-        %td Unlimited
-        %td Unlimited
-      %tr
-        %td Notifications
-        %td E-mail to Guests and Members
-        %td E-mail to Members
-        %td -
-      %tr
-        %td Leadership Roles
-        %td All Officers
-        %td VP Membership only
-        %td -
-      %tr
-        %td Support
-        %td Chat + E-mail
-        %td E-mail
-        %td -
-      %tr
-        %td Rates
-        %td $10 / month
-        %td $8 / month
-        %td $6 / month 
-    %h2 Discounts
-    %p Interested in paying in advance for six months or a year?  Great!!
-    %p 
-      Pay six months in advance and get a month free.  Pay a full year in advance and your club will get 
-      three months free.
-    %table
-      %th Benefits
-      %th Advanced
-      %th Essential
-      %th Starter
-      %tr
-        %td Six Months (One Free!)
-        %td $50 / month
-        %td $40 / month
-        %td $30 / month 
-      %tr
-        %td Twelve Months (Three Free!)
-        %td $50 / month
-        %td $40 / month
-        %td $30 / month 
-      
-        
-      
-    
+    %h2 TM Schedule Price plans are very simple.
+    .span-20.last
+      .span-4.prepend-1
+        %h3 Starter
+      .span-15.last
+        %ul
+          %li Unlimited Members
+          %li Unlimited Speeches and meeting roles
+          %li Unlimited Meetings  
+    .span-20.last
+      .span-4.prepend-1
+        %h3 Essential
+      .span-15.last
+        %ul
+          Everything in Starter plus +
+          %li E-mail Notifications to members 
+          %li E-mail support
+    .span-20.last
+      .span-4.prepend-1
+        %h3 Advanced
+      .span-15.last
+        %ul
+          Everything in Starter, Essential plus +
+          %li E-mail notification to guests
+          %li Live chat support  
+    %h2 Rates
+    .span-20.last
+      %p 
+        Pay six months in advance and get a month free.  Pay a full year in advance and your club will get 
+        three months free.
+    .span-18.prepend-2.last
+      %table
+        %th Benefits
+        %th Advanced
+        %th Essential
+        %th Starter
+        %tr
+          %td Per Month
+          %td $10
+          %td $8
+          %td $6 
+        %tr
+          %td Six Months (One Free!)
+          %td $50
+          %td $40
+          %td $30 
+        %tr
+          %td Twelve Months (Three Free!)
+          %td $90
+          %td $72
+          %td $54
