Starting relationship fix.

--- a/app/views/members/_membership.html.haml
+++ b/app/views/members/_membership.html.haml
@@ -1,3 +1,2 @@
 %tr
-  %td= link_to membership.type, membership
-  %td= membership.club_name
+  %td= link_to membership.club_name, club_path(membership.club)
