--- a/app/views/welcome/pricing.html.haml
+++ b/app/views/welcome/pricing.html.haml
@@ -21,14 +21,6 @@
           Everything in Starter plus +
           %li E-mail Notifications to members 
           %li E-mail support
-    .span-20.last
-      .span-4.prepend-1
-        %h3 Advanced
-      .span-15.last
-        %ul
-          Everything in Starter, Essential plus +
-          %li E-mail notification to guests
-          %li Live chat support  
     %h2 Rates
     .span-20.last
       %p 
@@ -37,21 +29,17 @@
     .span-18.prepend-2.last
       %table
         %th Benefits
-        %th Advanced
         %th Essential
         %th Starter
         %tr
-          %td Per Month
-          %td $10
+          %td Monthly
           %td $8
           %td $6 
         %tr
           %td Six Months (One Free!)
-          %td $50
           %td $40
           %td $30 
         %tr
           %td Twelve Months (Three Free!)
-          %td $90
           %td $72
           %td $54
