--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -3,7 +3,7 @@
 .span-4
   .span-4#lead_box.member_background Member
   #action_box
-    .span-4= link_to '(Edit)', edit_member_path(@member)
+    .span-4= link_to '(Change)', edit_member_path(@member)
     .span-4= link_to '(Add)', new_member_path()
 .span-20.last
   .span-20
@@ -17,7 +17,7 @@
       .span-4#labeler Phone
       .value= @member.phone
     .span-20  
-      .span-4#labeler.club_background Club
+      .span-4#labeler.club_background Primary Club
       - if not @member.my_club.nil? then  
         .span-6.value= link_to @member.my_club.name, @member.my_club 
     .span-20  
