--- a/app/views/clubs/_form.html.haml
+++ b/app/views/clubs/_form.html.haml
@@ -1,7 +1,10 @@
 = semantic_form_for @club do |f|
-  - f.inputs do
-    = f.input :name, :as => :string
-    = f.input :address, :as => :text, :required => false, :input_html => { :rows => 4}
-    = f.input :club_number, :as => :string, :required => false
-    = f.input :plan_type, :as => :string
-  = f.buttons :commit
+  .span-10.last.append-6
+    = f.inputs do
+      = f.input :name, :as => :string
+      = f.input :address, :as => :text, :required => false, :input_html => { :rows => 4}
+      = f.input :club_number, :as => :string, :required => false
+      = f.input :plan_type, :as => :string
+  .span-10.last
+    = f.buttons :commit
+    = link_to '<- Back to club', @club
