--- a/app/views/clubs/edit.html.haml
+++ b/app/views/clubs/edit.html.haml
@@ -1,5 +1,4 @@
 .span-4
   .span-4#lead_box.club_background Club
-.span-16
-  = render 'form'
-.span-2= link_to '(return)', @club
+.span-20.last
+  .span-20.last= render 'form'
