--- a/app/views/layouts/_nav_footer.html.haml
+++ b/app/views/layouts/_nav_footer.html.haml
@@ -1,5 +1,5 @@
 %span#action_box
-  = link_to "Pricing what?", pricing_path
+  = link_to "Pricing", pricing_path
 %span#action_box
   = link_to "About", about_path
 %span#action_box
