--- a/app/views/welcome/pricing.html.haml
+++ b/app/views/welcome/pricing.html.haml
@@ -22,24 +22,24 @@
           %li E-mail Notifications to members 
           %li E-mail support
     %h2 Rates
-    .span-20.last
-      %p 
-        Pay six months in advance and get a month free.  Pay a full year in advance and your club will get 
-        three months free.
-    .span-18.prepend-2.last
-      %table
-        %th Benefits
-        %th Essential
-        %th Starter
+    .span-18.prepend-1.last
+      %table.pricing
+        %th Subscription
+        %th.number 1 Month
+        %th.number 6 Months
+        %th.number 12 Months
         %tr
-          %td Monthly
-          %td $8
-          %td $6 
+          %td Essential
+          %td.number $6
+          %td.number $30
+          %td.number $54
         %tr
-          %td Six Months (One Free!)
-          %td $40
-          %td $30 
+          %td Starter
+          %td.number $8
+          %td.number $40
+          %td.number $72
         %tr
-          %td Twelve Months (Three Free!)
-          %td $72
-          %td $54
+          %td
+          %td.italic Easy to pay
+          %td.italic Matches membership period
+          %td.italic Biggest savings!
